[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Misc/plant_01.png" type="Texture" id=1]
[ext_resource path="res://src/Items/Plant01.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.61718, 7.41027 )

[node name="Plant01" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Area2D" type="Area2D" parent="." groups=[
"items",
]]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 7.35255, 6.74557 )
shape = SubResource( 1 )
[connection signal="area_entered" from="Area2D" to="." method="_on_item_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_item_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_item_input_event"]
